deployment/svc_nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: deployment
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
  type: LoadBalancer
